add more diagrams to decribe the features

--- a/mvf/MVF2-Slider.html
+++ b/mvf/MVF2-Slider.html
@@ -26,13 +26,13 @@
       <header class="major special">
         <h1>MVF2 - Slider</h1>
       </header>
-      <!-- <a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a> -->
+
       <h2>1. Diagram design</h2>
       <!-- STUB: done -->
       <p>
 
-      <p><b>Activity diagram: <br></b>
-        <b><img src="#" width="960" height="600" alt="" /></p>
+      <p><b>Mock up (By invision): <br></b>
+        <b><img src="/images/slider.gif" width="960" height="600" alt="" /></p>
       </p>
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
