--- a/mvf/MVF3-Data_collection_and_recommendation.html
+++ b/mvf/MVF3-Data_collection_and_recommendation.html
@@ -1,19 +1,5 @@
 <!DOCTYPE html>
-<!--     <table data-toggle="table">
-            <thead>
-              <tr>
-                <th>User story</th>
-                <th>Acceptance criteria</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td></td>
-                <td></td>
-               
-              </tr>
-            </tbody>
-          </table> -->
+
 
 <html>
 
@@ -40,14 +26,26 @@
       <header class="major special">
         <h1>MVF3 - Kitchen and Pantry System </h1>
       </header>
-      <!-- <a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a> -->
       <h2>1. Diagram design</h2>
       <!-- STUB: done -->
       <p>
 
       <p><b>Activity diagram: <br></b>
         <b><img src="/images/MVF3.png" width="960" height="600" alt="" /></p>
+      <p><b>Class diagram: <br></b>
+        <b><img src="/images/mvf3class-Pantry.bmp" width="960" height="600" alt="" /></p>
       </p>
+      <p><b>Design diagram: <br></b>
+        <b><img src="/images/mvf3kitchen.bmp" width="960" height="700" alt="" /></p>
+      </p>
+      <p><b>Design diagram: <br></b>
+        <b><img src="/images/mvf3pantry.bmp" width="960" height="300" alt="" /></p>
+      </p>
+      <p><b>Design diagram: <br></b>
+        <b><img src="/images/mvf3pantry2.bmp" width="960" height="500" alt="" /></p>
+      </p>
+  
+  
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
       <p style="color: black;"> This is our one of key features. We allow registered users to have their online kitchen
