--- a/mvf/MVF4-Recipe_information.html
+++ b/mvf/MVF4-Recipe_information.html
@@ -1,19 +1,5 @@
 <!DOCTYPE html>
-<!--     <table data-toggle="table">
-            <thead>
-              <tr>
-                <th>User story</th>
-                <th>Acceptance criteria</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td></td>
-                <td></td>
-               
-              </tr>
-            </tbody>
-          </table> -->
+
 
 <html>
 
@@ -45,8 +31,13 @@
       <!-- STUB: done -->
       <p>
 
-        <p><b>Activity diagram: <br></b>
-          <b><img src="#" width="960" height="600" alt="" /></p>
+        <p><b>Design diagram: <br></b>
+          <b><img src="/images/mvf4card.bmp" width="960" height="600" alt="" /></p>
+      </p>
+      <p>
+
+        <p><b>Design diagram: <br></b>
+          <b><img src="/images/mvf4gif.gif" width="960" height="300" alt="" /></p>
       </p>
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
