--- a/mvf/MVF6-Tags_and_searching.html
+++ b/mvf/MVF6-Tags_and_searching.html
@@ -1,19 +1,5 @@
 <!DOCTYPE html>
-<!--     <table data-toggle="table">
-            <thead>
-              <tr>
-                <th>User story</th>
-                <th>Acceptance criteria</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td></td>
-                <td></td>
-               
-              </tr>
-            </tbody>
-          </table> -->
+
 
 <html>
 
@@ -47,6 +33,20 @@
 
         <p><b>Activity diagram: <br></b>
           <b><img src="/images/MVF6_Activity_diagram.png" width="960" height="600" alt="" />
+        </p>
+
+      </p>
+      <p>
+
+        <p><b>Class diagram: <br></b>
+          <b><img src="/images/mvf6calss.bmp" width="960" height="600" alt="" />
+        </p>
+
+      </p>
+      <p>
+
+        <p><b>Mock up diagram: <br></b>
+          <b><img src="/images/mvf6gif.gif" width="960" height="300" alt="" />
         </p>
 
       </p>
