--- a/mvf/MVF5-Step-by-step_instructions.html
+++ b/mvf/MVF5-Step-by-step_instructions.html
@@ -1,19 +1,5 @@
 <!DOCTYPE html>
-<!--     <table data-toggle="table">
-            <thead>
-              <tr>
-                <th>User story</th>
-                <th>Acceptance criteria</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td></td>
-                <td></td>
-               
-              </tr>
-            </tbody>
-          </table> -->
+
 
 <html>
 
@@ -46,6 +32,12 @@
       <p>
         <p><b>Activity diagram: <br></b>
           <b><img src="/images/MVF5.png" width="960" height="600" alt="" />
+        </p>
+        <p><b>Class diagram: <br></b>
+          <b><img src="/images/mvf5class.bmp" width="960" height="600" alt="" />
+        </p>
+        <p><b>Mock up diagram: <br></b>
+          <b><img src="/images/mvf5gif.gif" width="960" height="300" alt="" />
         </p>
         <h2>2.Explanation</h2>
         <h3>2.1 Description</h3>
