modified nav and so  on

--- a/mvf/MVF7-Upload_and_manage_posts.html
+++ b/mvf/MVF7-Upload_and_manage_posts.html
@@ -46,7 +46,11 @@
       <p>
 
         <p><b>Activity diagram: <br></b>
-          <b><img src="images/mvf6Diagram.jpg" /></p>
+          <b><img src="/images/mvf7diagram.jpg" width="960" /></p>
+
+        <p><b>Mock up diagram: <br></b>
+          <b><img src="/images/mvf7gif.gif" width="960" height="300"/></p>
+
       </p>
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
