--- a/other/team-meeting.html
+++ b/other/team-meeting.html
@@ -3,7 +3,7 @@
 
 <html>
   <head>
-    <title>MVF4-Recipe thumbnail </title>
+    <title>Team meetings link </title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
