--- a/other/trello-task.html
+++ b/other/trello-task.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Estimation Plan</title>
+    <title>Trello Task</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
