--- a/github/github-activity.html
+++ b/github/github-activity.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <title>Estimation Plan</title>
+  <title>Github Activity</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
