--- a/mvf/MVF5-Step-by-step_instructions.html
+++ b/mvf/MVF5-Step-by-step_instructions.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-  <title>MVF5-Step-by-step instructions</title>
+  <title>MVF5-Step-by-step instruction</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
