clear useless files

--- a/index.html
+++ b/index.html
@@ -36,14 +36,12 @@
       </header>
       <p>
         <video width="960" height="600" controls>
-          <source src="#" type="#">>
+          <source src="/mockupvideo/Mockup2.0.mkv" type="">
           
         </video>
       </p>
 
-      <ul class="actions">
-        <li><a href="/MVF1-Account_management.html" class="button alt">Learn More</a></li>
-      </ul>
+  
     </div>
   </section>
 
