--- a/mvf/MVF7-Upload_and_manage_posts.html
+++ b/mvf/MVF7-Upload_and_manage_posts.html
@@ -56,7 +56,7 @@
       <h3>2.1 Description</h3>
       <p style="color: black;">
         <ul>
-          <li>Basically, the two functions to upload and edit this post are almost equivalent. They allow users to share
+          <li>The two functions to upload and edit this post are almost equivalent. They allow users to share
             and edit their recipes</li>
           <li>Upload and edit post uses popular design for most of today's social networks, so it is very user-friendly.
             They are also designed by us according to the 10 hierarchy design principles.</li>
