add pic for mvf1

--- a/mvf/MVF1-Account_management.html
+++ b/mvf/MVF1-Account_management.html
@@ -36,7 +36,11 @@
       <p>
         <p>
           <h3>Class Diagram</h3>
-          <b><img src="/images/class-account.bmp" alt="Class Diagram" />
+          <b><img src="/images/mvf1class-account.bmp" width="960" height="600" alt="Class Diagram" />
+        </p>
+        <p>
+          <h3>Design Diagram</h3>
+          <b><img src="/images/mvf1login.bmp" width="960" height="600" alt="Class Diagram" />
         </p>
         <p>
 
@@ -85,10 +89,6 @@
                       </p>
                     </td>
                   </tr>
-
-
-
-
 
                   <tr>
                     <td><b>As a</b> user,
