--- a/plan/how.html
+++ b/plan/how.html
@@ -4,14 +4,14 @@
 
 <head>
   <title>Technologies</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css" />
-  <link rel="stylesheet" href="assets/css/main.css" />
+  <link rel="stylesheet" href="/assets/css/main.css" />
   <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
 </head>
 
@@ -30,7 +30,7 @@
       <h2>1. Resources and Tools</h2>
       <ul>
         <li>
-          <img src="images/java.jpg" width="367" height="248" alt="" />
+          <img src="/images/java.jpg" width="367" height="248" alt="" />
           <p>
             <b>Description:</b> Java is a general-purpose programming language
             that is class-based, object-oriented.
@@ -46,7 +46,7 @@
           </p>
         </li>
         <li>
-          <img src="images/springboot.jpg" width="467" height="248" alt="" />
+          <img src="/images/springboot.jpg" width="467" height="248" alt="" />
           <p>
             <b>Description:</b> Spring boot is a back-end application
             framework for java platform.
@@ -59,7 +59,7 @@
           </p>
         </li>
         <li>
-          <img src="images/thymeleaf.png" width="248" height="248" alt="" />
+          <img src="/images/thymeleaf.png" width="248" height="248" alt="" />
           <p>
             <b>Description:</b> Thymeleaf is a modern server-side Java
             template engine.
@@ -74,7 +74,7 @@
           </p>
         </li>
         <li>
-          <img src="images/mybatis.jpg" width="367" height="248" alt="" />
+          <img src="/images/mybatis.jpg" width="367" height="248" alt="" />
           <p>
             <b>Description:</b> MyBatis is a persistence framework with
             support for custom SQL, stored procedures and advanced mappings.
@@ -90,7 +90,7 @@
         </li>
 
         <li>
-          <img src="images/mysql.jpg" width="367" height="248" alt="" />
+          <img src="/images/mysql.jpg" width="367" height="248" alt="" />
           <p>
             <b>Description:</b> Mysql is the world's most popular open source
             database. <a href="https://www.mysql.com/">(link)</a>
@@ -130,18 +130,7 @@
   <div id="footerDiv"></div>
 
   <!-- Scripts -->
-  <script src="assets/js/jquery.min.js"></script>
-  <script src="assets/js/skel.min.js"></script>
-  <script src="assets/js/util.js"></script>
-  <script src="assets/js/main.js"></script>
-  <script src="assets/js/loader.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-  </script>
-  <script src="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.js"></script>
+  <script src="/assets/js/common.js"></script>
 </body>
 
 </html>
