--- a/P2/MVF1-Account_management.html
+++ b/P2/MVF1-Account_management.html
@@ -47,10 +47,9 @@
         <b><img src="/images/MVF1_Activity_diagram.png"  alt="" />
         </p>
       <p>
-        Users should be able to create new accounts, log in, and log out.
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
-      <p style="color: black;"> WRITE SOMETHING </p>
+      <p style="color: black;"> Users should be able to create new accounts, log in, and log out. </p>
       <h3>2.2 User story and criterias</h3>
 
      
