--- a/P2/MVF4-Recipe_information.html
+++ b/P2/MVF4-Recipe_information.html
@@ -50,7 +50,9 @@
       </p>
       <h2>2.Explanation</h2>
       <h3>2.1 Description</h3>
-      <p style="color: black;">Below the slider, there will be a list of recipes with pictures. Users can click on the picture for further information.   </p>
+      <p style="color: black;">Below the slider, there will be a list of recipes include basic 
+        informations such as title and author with pictures. Users can click on the picture 
+        for further detail information.   </p>
       <h3>2.2 User story and criteria</h3>
 
       <ul>
