--- a/mvf/MVF7-Upload_and_manage_posts.html
+++ b/mvf/MVF7-Upload_and_manage_posts.html
@@ -56,10 +56,8 @@
       <h3>2.1 Description</h3>
       <p style="color: black;">
         <ul>
-          <li>The two functions to upload and edit this post are almost equivalent. They allow users to share
-            and edit their recipes</li>
-          <li>Upload and edit post uses popular design for most of today's social networks, so it is very user-friendly.
-            They are also designed by us according to the 10 hierarchy design principles.</li>
+          <li>The two functions to upload and manage this post are almost equivalent. They allow users to share
+            and manage their recipes. Users can use it to post their recipes and share them with others. Also, they can manage and edit them if there is a change to the recipe they want</li>
           <li>According to the above diagram, users can freely manipulate as they want and still complete the task
             because this function does not force the user to follow specific rules to upload a recipe. Even so to upload
             a recipe, they still have to fill in its minimum information.</li>
