--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             We can do a lot in this project, please see the detail
           </p>
           <ul class="actions">
-            <li><a href="#" class="button alt">Learn More</a></li>
+            <li><a href="/mvf/MVF1-Account_management.html" class="button alt">Learn More</a></li>
           </ul>
         </div>
       </article>
@@ -122,7 +122,7 @@
             beforehand. We has planned how to complete this project.
           </p>
           <ul class="actions">
-            <li><a href="mvf/MVF1-Account_management.html" class="button alt">Learn More</a></li>
+            <li><a href="/plan/estimate.html" class="button alt">Learn More</a></li>
           </ul>
         </div>
       </article>
