--- a/mvf/MVF7-Upload_and_manage_posts.html
+++ b/mvf/MVF7-Upload_and_manage_posts.html
@@ -56,11 +56,11 @@
       <h3>2.1 Description</h3>
       <p style="color: black;">
         <ul>
-          <li>The two functions to upload and manage this post are almost equivalent. They allow users to share
-            and manage their recipes. Users can use it to post their recipes and share them with others. Also, they can manage and edit them if there is a change to the recipe they want</li>
+          <li>The two functions to upload and manage this post are almost equivalent. Users can use it to post their recipes and share them with others. Also, they can manage and edit them if there is a change to the recipe they want. Furthermore, to make it easier for people to find the recipe the owner has shared, we also require the owner to add style tags and ingredient. 
+Based on the tags and ingredients names, users can figure out formulas that have all the ingredients they have without spending too much time</li>
           <li>According to the above diagram, users can freely manipulate as they want and still complete the task
             because this function does not force the user to follow specific rules to upload a recipe. Even so to upload
-            a recipe, they still have to fill in its minimum information.</li>
+            a recipe, they still have to fill in its minimum information such as name, style, ingredients and cooking descriiption.</li>
         </ul>
       </p>
       <h3>2.2 User story and criteria</h3>
