change commit numbers to commit times

--- a/github/commits.html
+++ b/github/commits.html
@@ -29,7 +29,7 @@
         <thead>
           <tr>
             <th>Name</th>
-            <th>Commit Number</th>
+            <th>Commit Times</th>
 
           </tr>
         </thead>
