upload scd mvf1

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
           
         </video>
       </p>
-
+      <p>
+        <h3>System Context Diagram</h3>
+        <b><img src="/images/scd.png" width="960" height="500" alt="Class Diagram" />
+      </p>
+      <p>
   
     </div>
   </section>
