--- a/mvf/MVF1-Account_management.html
+++ b/mvf/MVF1-Account_management.html
@@ -26,21 +26,29 @@
       <header class="major special">
         <h1>MVF1 - Account System</h1>
       </header>
-      <!-- <a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a> -->
+
       <h2>1. Diagram design</h2>
       <!-- STUB: done -->
       <p>
         <h3>Activity Diagram</h3>
-        <b><img src="/images/MVF1_Activity_diagram.png" alt="Activity Diagram" />
+        <b><img src="/images/mvf1activ.png" alt="Activity Diagram" />
       </p>
       <p>
         <p>
-          <h3>Class Diagram</h3>
+          <h3>Class Diagram For User Class</h3>
           <b><img src="/images/mvf1class-account.bmp" width="960" height="600" alt="Class Diagram" />
         </p>
         <p>
-          <h3>Design Diagram</h3>
+          <h3>Design Diagram For Login</h3>
           <b><img src="/images/mvf1login.bmp" width="960" height="600" alt="Class Diagram" />
+        </p>
+        <p>
+          <h3>Design Diagram For Sign Up</h3>
+          <b><img src="/images/mvf1createaccount.bmp" width="960" height="600" alt="Class Diagram" />
+        </p>
+        <p>
+          <h3>Design Diagram For Profile Page</h3>
+          <b><img src="/images/mvf1profile.bmp" width="960" height="900" alt="Class Diagram" />
         </p>
         <p>
 
