--- a/mvf/MVF2-Slider.html
+++ b/mvf/MVF2-Slider.html
@@ -32,6 +32,7 @@
       <p>
 
       <p><b>Mock up (By invision): <br></b>
+        <p>User can select a slider picture and navigate to the recipe page directly</p>
         <b><img src="/images/slider.gif" width="960" height="600" alt="" /></p>
       </p>
       <h2>2.Explanation</h2>
