--- a/index.html
+++ b/index.html
@@ -41,9 +41,14 @@
         </video>
       </p>
       <p>
+        <h3>ER Diagram</h3>
+        <b><img src="/images/er.png" width="1200" height="700"  alt="Class Diagram" />
+      </p>
+      <p>
         <h3>System Context Diagram</h3>
         <b><img src="/images/scd.png" width="960" height="500" alt="Class Diagram" />
       </p>
+ 
       <p>
   
     </div>
