--- a/other/github-activity.html
+++ b/other/github-activity.html
@@ -1,149 +1,115 @@
 <!DOCTYPE html>
 
-
 <html>
-  <head>
-    <title>Team meetings link </title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css"
-    />
-    <link rel="stylesheet" href="/assets/css/main.css" />
-    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
-  </head>
 
-  <body>
-    <!-- Header -->
-    <div id="headerDiv"></div>
+<head>
+  <title>Github Activity</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css" />
+  <link rel="stylesheet" href="/assets/css/main.css" />
+  <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
+</head>
 
-    <!-- Main -->
-    <section id="main">
-      <div class="inner">
-        <header class="major special">
-          <h1>Team Meeting Table</h1>
-        </header>
+<body>
+  <!-- Header -->
+  <div id="headerDiv"></div>
+  <!-- Main -->
+  <section id="main">
+    <div class="inner">
+      <header class="major special">
+      <!--  <h1>&quot;When&quot; section</h1> -->
+      </header>
 
-        <table data-toggle="table">
-          <thead>
-            <tr>
-              <th>Date</th>
-              <th>Link</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>8/1</td>
-              <td>
-                <a
-                  href="https://web.microsoftstream.com/video/874cdeb2-fa06-4203-9936-88ab933b395f"
-                >
-                  LINK</a
-                >
-              </td>
-            </tr>
-            <tr>
-              <td>8/8</td>
-              <td>
-                <a
-                  href="https://web.microsoftstream.com/video/57a8e5c3-6a2b-45e4-a68a-50b9901cb950"
-                >
-                  LINK</a
-                >
-              </td>
-            </tr>
-            <tr>
-              <td>8/12</td>
-              <td>
-                <a
-                  href="https://web.microsoftstream.com/video/93e77218-76d2-4cfd-aaaf-d71b69685b53"
-                >
-                  LINK</a
-                >
-              </td>
-            </tr>
-            <tr>
-              <td>8/14</td>
-              <td>
-                <a
-                  href="
-                    https://web.microsoftstream.com/video/a59f2dd6-64cd-4983-9db0-764a01db70c2
-               "
-                >
-                  LINK</a
-                >
-              </td>
-            </tr>
-            <tr>
-              <td>8/19</td>
-              <td>
-                <a
-                  href="https://web.microsoftstream.com/video/951373b4-dc82-4b49-b034-502639679fe0"
-                >
-                  LINK</a
-                >
-              </td>
-            </tr>
-            <tr>
-              <td>8/28</td>
-              <td>
-                <a
-                  href="
-                    https://web.microsoftstream.com/video/b1435ace-6ee1-4610-8aee-2d966b5da191
-               "
-                >
-                  LINK</a
-                >
-              </td>
-            </tr>
-            <tr>
-              <td>9/5</td>
-              <td>
-                <a
-                  href="
-                    https://web.microsoftstream.com/video/d383a287-6f88-4846-8fb7-9c05d5c36077
-               "
-                >
-                  LINK</a
-                >
-              </td>
-            </tr>
-            <tr>
-              <td>9/11</td>
-              <td>
-                <a
-                  href="
-                    https://web.microsoftstream.com/video/41f92d03-935c-4062-873e-ac87fcfa1e63
-               "
-                >
-                  LINK</a
-                >
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </section>
+      <H2>Github commit history for branches: </H2>
+      <table data-toggle="table">
+        <thead>
+          <tr>
+            <th>Branch</th>
+            <th>Link</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>assignment part 2</td>
+            <td>
+              <a
+                href="https://github.com/YiYang-Clotho/TR-WE-430-Ditto/commits/p2?after=9052292b0da1b9c6eed1d6ccc7b2c5987ecf28af+34&branch=p2"
+              >
+                LINK</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>invision</td>
+            <td>
+              <a
+                href="https://github.com/YiYang-Clotho/TR-WE-430-Ditto/commits/invision?before=6150672b2d017a37ec37706a7f98e1fa4ea0ad42+35&branch=invision"
+              >
+                LINK</a
+              >
+            </td>
+          </tr>
+        </tbody>
+      </table>
 
-    <!-- Footer -->
-    <div id="footerDiv"></div>
+      <p><H3>Github Screenshots: <br></H3>
+        <b>Branch invision: <br></b>
+        <b><img src="/images/invision_commit_8.jpg" width="1035" alt="" /></b>
+        <b><img src="/images/invision_commit_7.jpg" width="1035" alt="" /></b>
+        <b><img src="/images/invision_commit_6.jpg" width="1035" alt="" /></b>
+        <b><img src="/images/invision_commit_5.jpg" width="1035" alt="" /></b>
+        <b><img src="/images/invision_commit_4.jpg" width="1035" alt="" /></b>
+        <b><img src="/images/invision_commit_3.jpg" width="1035" alt="" /></b>
+        <b><img src="/images/invision_commit_2.jpg" width="1035" alt="" /></b>
+        <b><img src="/images/invision_commit_1.jpg" width="1035" alt="" /></b>
+        
+        <b>Branch p2: <br></b>
+        <b><img src="/images/p2_commit_6.jpg" width="1035" alt="" /></b>
+        <b><img src="/images/p2_commit_7.jpg" width="1035" alt="" /></b>
+        <b><img src="/images/p2_commit_8.jpg" width="1035" alt="" /></b>
+        <b><img src="/images/p2_commit_9.jpg" width="1035" alt="" /></b>
+        <b><img src="/images/p2_commit_3.jpg" width="1035" alt="" /></b>
+        <b><img src="/images/p2_commit_2.jpg" width="1035" alt="" /></b>
+        <b><img src="/images/p2_commit_1.jpg" width="1035" alt="" /></b>
+      </p>
+<!--
+      <table data-toggle="table">
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>Planned Start</th>
+            <th>Planned Due</th>
+            <th>Lead by</th>
+            <th>Links</th>
+          </tr>
+        </thead>
+        <tbody>
+         
+        </tbody>
+      </table>
+    -->
+    </div>
+  </section>
+  <!-- Footer -->
+  <div id="footerDiv"></div>
+  <!-- Scripts -->
+  <script src="/assets/js/jquery.min.js"></script>
+  <script src="/assets/js/skel.min.js"></script>
+  <script src="/assets/js/util.js"></script>
+  <script src="/assets/js/main.js"></script>
+  <script src="/assets/js/loader.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.js"></script>
+</body>
 
-    <script src="/assets/js/common.js"></script>
-  </body>
 </html>
