update meeting time table

--- a/other/team-meeting.html
+++ b/other/team-meeting.html
@@ -49,7 +49,7 @@
           </thead>
           <tbody>
             <tr>
-              <td>8/1</td>
+              <td>8/1 week2</td>
               <td>
                 <a
                   href="https://web.microsoftstream.com/video/874cdeb2-fa06-4203-9936-88ab933b395f"
@@ -59,7 +59,7 @@
               </td>
             </tr>
             <tr>
-              <td>8/8</td>
+              <td>8/8 week3</td>
               <td>
                 <a
                   href="https://web.microsoftstream.com/video/57a8e5c3-6a2b-45e4-a68a-50b9901cb950"
@@ -69,7 +69,7 @@
               </td>
             </tr>
             <tr>
-              <td>8/12</td>
+              <td>8/12 week4.1</td>
               <td>
                 <a
                   href="https://web.microsoftstream.com/video/93e77218-76d2-4cfd-aaaf-d71b69685b53"
@@ -79,7 +79,7 @@
               </td>
             </tr>
             <tr>
-              <td>8/14</td>
+              <td>8/14 week4.2</td>
               <td>
                 <a
                   href="
@@ -91,7 +91,7 @@
               </td>
             </tr>
             <tr>
-              <td>8/19</td>
+              <td>8/19 week5</td>
               <td>
                 <a
                   href="https://web.microsoftstream.com/video/951373b4-dc82-4b49-b034-502639679fe0"
@@ -101,7 +101,7 @@
               </td>
             </tr>
             <tr>
-              <td>8/28</td>
+              <td>8/28 week6</td>
               <td>
                 <a
                   href="
@@ -113,7 +113,7 @@
               </td>
             </tr>
             <tr>
-              <td>9/5</td>
+              <td>9/5 mid semester</td>
               <td>
                 <a
                   href="
@@ -125,12 +125,23 @@
               </td>
             </tr>
             <tr>
-              <td>9/11</td>
+              <td>9/11 week7</td>
               <td>
                 <a
                   href="
                     https://web.microsoftstream.com/video/41f92d03-935c-4062-873e-ac87fcfa1e63
                "
+                >
+                  LINK</a
+                >
+              </td>
+            </tr>
+            <tr>
+              <td>9/19 week8</td>
+              <td>
+                <a
+                  href="
+                  https://web.microsoftstream.com/video/e68efa53-537d-4352-a3d8-969d3966f446"
                 >
                   LINK</a
                 >
