--- a/plan/estimate.html
+++ b/plan/estimate.html
@@ -1,43 +1,165 @@
 <!DOCTYPE html>
 
-
 <html>
 
 <head>
-    <title>Estimation Plan</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css" />
-    <link rel="stylesheet" href="/assets/css/main.css" />
-    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
+  <title>Estimate Plan</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css" />
+  <link rel="stylesheet" href="/assets/css/main.css" />
+  <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
 </head>
 
 <body>
-    <!-- Header -->
-    <div id="headerDiv"></div>
+  <!-- Header -->
+  <div id="headerDiv"></div>
+  <!-- Main -->
+  <section id="main">
+    <div class="inner">
+      <header class="major special">
+      <!--  <h1>&quot;When&quot; section</h1> -->
+      </header>
 
-    <!-- Main -->
-    <section id="main">
-        <div class="inner">
-            <header class="major special">
-                <h1>MVF2 - Slider</h1>
-            </header>
+      <H2>Estimate plan table link: </H2>
+      <table data-toggle="table">
+        <thead>
+          <tr>
+            <th>person</th>
+            <th>Link</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Total</td>
+            <td>
+              <a
+                href=""
+              >
+                LINK</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>Zhihao Liang</td>
+            <td>
+              <a
+                href=""
+              >
+                LINK</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>Heran Wang</td>
+            <td>
+              <a
+                href=""
+              >
+                LINK</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>Mingxuan Zhou</td>
+            <td>
+              <a
+                href=""
+              >
+                LINK</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>Yi Yang</td>
+            <td>
+              <a
+                href=""
+              >
+                LINK</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>Yingjian Di</td>
+            <td>
+              <a
+                href=""
+              >
+                LINK</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>Gia Hung Le</td>
+            <td>
+              <a
+                href=""
+              >
+                LINK</a
+              >
+            </td>
+          </tr>
+        </tbody>
+      </table>
 
-            <h2>1. Diagram design</h2>
-            <!-- STUB: done -->
-  
-
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <div id="footerDiv"></div>
-
-    <script src="/assets/js/common.js"></script>
+      <p><H3>Estimate plan Screenshots: <br></H3>
+        <b>Branch invision: <br></b>
+        <b><img src="/images/" width="1035" alt="" /></b>
+        <b><img src="/images/" width="1035" alt="" /></b>
+        <b><img src="/images/" width="1035" alt="" /></b>
+        <b><img src="/images/" width="1035" alt="" /></b>
+        <b><img src="/images/" width="1035" alt="" /></b>
+        <b><img src="/images/" width="1035" alt="" /></b>
+        <b><img src="/images/" width="1035" alt="" /></b>
+        <b><img src="/images/" width="1035" alt="" /></b>
+        
+        <b>Branch p2: <br></b>
+        <b><img src="/images/" width="1035" alt="" /></b>
+        <b><img src="/images/" width="1035" alt="" /></b>
+        <b><img src="/images/" width="1035" alt="" /></b>
+        <b><img src="/images/" width="1035" alt="" /></b>
+        <b><img src="/images/" width="1035" alt="" /></b>
+        <b><img src="/images/" width="1035" alt="" /></b>
+        <b><img src="/images/" width="1035" alt="" /></b>
+      </p>
+<!--
+      <table data-toggle="table">
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>Planned Start</th>
+            <th>Planned Due</th>
+            <th>Lead by</th>
+            <th>Links</th>
+          </tr>
+        </thead>
+        <tbody>
+         
+        </tbody>
+      </table>
+    -->
+    </div>
+  </section>
+  <!-- Footer -->
+  <div id="footerDiv"></div>
+  <!-- Scripts -->
+  <script src="/assets/js/jquery.min.js"></script>
+  <script src="/assets/js/skel.min.js"></script>
+  <script src="/assets/js/util.js"></script>
+  <script src="/assets/js/main.js"></script>
+  <script src="/assets/js/loader.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.js"></script>
 </body>
 
 </html>
