--- a/mvf/MVF1-Account_management.html
+++ b/mvf/MVF1-Account_management.html
@@ -31,7 +31,7 @@
       <!-- STUB: done -->
       <p>
         <h3>Activity Diagram</h3>
-        <b><img src="/images/MVF1_Activity_diagram.png" alt="Activity Diagram" />
+        <b><img src="/images/mvf1activ.png" alt="Activity Diagram" />
       </p>
       <p>
         <p>
