--- a/mvf/MVF4-Recipe_information.html
+++ b/mvf/MVF4-Recipe_information.html
@@ -32,7 +32,7 @@
       <p>
 
         <p><b>Design diagram: <br></b>
-          <b><img src="/images/mvf4card.bmp" width="960" height="600" alt="" /></p>
+          <b><img src="/images/mvf4.bmp" width="960" height="600" alt="" /></p>
       </p>
       <p>
 
